[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
chrono = "0.4.24"
anyhow = "1.0"
prettytable-rs = "^0.10"
